force-app/main/default/objects/Order_Item__c/fields/Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin__c</fullName>
    <formula>IF(
	OR(TEXT(Order__r.Deliver_Plant__c  )=&apos;3011&apos;,TEXT(Order__r.Deliver_Plant__c )=&apos;3020&apos;),(Actual_Total_Cash_Price__c - Actual_Total_Cost__c ),(Actual_Total_Price__c - Actual_Total_Cost__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>