force-app/main/default/objects/Order_Item__c/fields/Actual_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_Rate__c</fullName>
    <label>Actual Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>