force-app/main/default/objects/Order_Item__c/fields/Actual_Order_Item_Amount_w_o_tax__c.field-meta.xml
<CustomField>
    <fullName>Actual_Order_Item_Amount_w_o_tax__c</fullName>
    <formula>IF(isClosed__c,Delivery_Quantity__c*Price__c,Quantity__c*Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Order Item Amount(w/o tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>