force-app/main/default/objects/Order_Item__c/fields/Actual_Total_Cash_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Cash_Price__c</fullName>
    <formula>IF(isClosed__c,Cash_Price__c *Delivery_Quantity__c+Subsequent_Transaction_Amounts__c,Cash_Price__c *Quantity__c+Subsequent_Transaction_Amounts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Cash Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>