force-app/main/default/objects/Order_Item__c/fields/Actual_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Cost__c</fullName>
    <formula>IF( 
    isClosed__c,
    IF(
        OR(
            TEXT(Delivery_Plant__c)=&apos;3011&apos;,
            TEXT(Delivery_Plant__c)=&apos;3020&apos;
        ),
							
								Delivery_Total_Cost__c,
        
        Delivery_Quantity__c*Product_Cost__c
    ),
    IF(
        OR(
            TEXT(Delivery_Plant__c)=&apos;3011&apos;,
            TEXT(Delivery_Plant__c)=&apos;3020&apos;
        ),
								IF(
								    Delivery_Quantity__c = 0,
												Quantity__c*Product_Cost__c,
												(Quantity__c-Delivery_Quantity__c)*Delivery_Unit_Cost__c+Delivery_Total_Cost__c
								),
        Quantity__c*Product_Cost__c
    )
    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>