force-app/main/default/objects/Order_Item__c/fields/Actual_Total_Estimate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Estimate_Cost__c</fullName>
    <formula>IF( isClosed__c ,Delivery_Quantity__c*Unit_Estimate_Cost__c,Quantity__c*Unit_Estimate_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Estimate Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>