force-app/main/default/objects/Order_Item__c/fields/Amount_per_item__c.field-meta.xml
<CustomField>
    <fullName>Amount_per_item__c</fullName>
    <label>Order Item Amount(w/o tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>