force-app/main/default/objects/Order_Item__c/fields/Amount_per_item_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_per_item_USD__c</fullName>
    <formula>Amount_per_item__c / Order__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>