force-app/main/default/objects/Order_Item__c/fields/Approve_Level__c.field-meta.xml
<CustomField>
    <fullName>Approve_Level__c</fullName>
    <label>Approval Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>