force-app/main/default/objects/Order_Item__c/fields/Auto_Issue_Consignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Issue_Consignment__c</fullName>
    <formula>Order__r.Auto_Issue_Consignment__c</formula>
    <label>*Auto-Issue Consignment?</label>
    <type>Checkbox</type>
</CustomField>