force-app/main/default/objects/Order_Item__c/fields/Basic_Number__c.field-meta.xml
<CustomField>
    <fullName>Basic_Number__c</fullName>
    <formula>Quantity__c * Sales_Unit__r.Molecule__c/ Sales_Unit__r.Denominator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Quantity (Basic Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>