force-app/main/default/objects/Order_Item__c/fields/Campaign_Product__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Product</label>
    <referenceTo>Campaign_Product__c</referenceTo>
    <relationshipLabel>Free Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>