force-app/main/default/objects/Order_Item__c/fields/Change_Price__c.field-meta.xml
<CustomField>
    <fullName>Change_Price__c</fullName>
    <formula>Guide_Price__c != Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Price</label>
    <type>Checkbox</type>
</CustomField>