force-app/main/default/objects/Order_Item__c/fields/Close_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Close_Quantity__c</fullName>
    <formula>IF( isClosed__c, Quantity__c-Delivery_Quantity__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>