force-app/main/default/objects/Order_Item__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closure_Reason</valueSetName>
    </valueSet>
</CustomField>