force-app/main/default/objects/Order_Item__c/fields/Collection_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collection_Transaction_Amount__c</fullName>
    <label>Order Item Collection Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>