force-app/main/default/objects/Order_Item__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>