force-app/main/default/objects/Order_Item__c/fields/Commodity_Name__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Name__c</fullName>
    <formula>Commodity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commodity_Name</label>
    <type>Text</type>
</CustomField>