force-app/main/default/objects/Order_Item__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <label>Crop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Crop</valueSetName>
    </valueSet>
</CustomField>