force-app/main/default/objects/Order_Item__c/fields/Default_Unit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_Quantity__c</fullName>
    <formula>Sales_Unit__r.Conversion_Coefficient__c  *  Quantity__c</formula>
    <label>Default Unit Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>