force-app/main/default/objects/Order_Item__c/fields/Delivery_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Text__c</fullName>
    <formula>TEXT(Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date Text</label>
    <type>Text</type>
</CustomField>