force-app/main/default/objects/Order_Item__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZARB Delivery Note</label>
    <referenceTo>Delivery_Note__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>