force-app/main/default/objects/Order_Item__c/fields/Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plant__c</fullName>
    <label>Delivery Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant</valueSetName>
    </valueSet>
</CustomField>