force-app/main/default/objects/Order_Item__c/fields/Delivery_Plant_Formula__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plant_Formula__c</fullName>
    <formula>TEXT( Order__r.Deliver_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Plant Formula</label>
    <type>Text</type>
</CustomField>