force-app/main/default/objects/Order_Item__c/fields/Delivery_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity__c</fullName>
    <label>Order Item Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>