force-app/main/default/objects/Order_Item__c/fields/Delivery_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Unit_Cost__c</fullName>
    <label>Delivery Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>