force-app/main/default/objects/Order_Item__c/fields/Depend_On_Item__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fill up Consignment Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Order Item (Issue Consignment)</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>