force-app/main/default/objects/Order_Item__c/fields/DN_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>DN_Post_Date__c</fullName>
    <label>DN Post Date</label>
    <type>Date</type>
</CustomField>