force-app/main/default/objects/Order_Item__c/fields/Edit_Status__c.field-meta.xml
<CustomField>
    <fullName>Edit_Status__c</fullName>
    <label>Edit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>