force-app/main/default/objects/Order_Item__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>Estimated delivery date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>