force-app/main/default/objects/Order_Item__c/fields/External_Id2__c.field-meta.xml
<CustomField>
    <fullName>External_Id2__c</fullName>
    <label>External Id2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>