force-app/main/default/objects/Order_Item__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant</valueSetName>
    </valueSet>
</CustomField>