force-app/main/default/objects/Order_Item__c/fields/FECHA_DE_PAGO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_PAGO__c</fullName>
    <label>FECHA DE PAGO</label>
    <type>Date</type>
</CustomField>