force-app/main/default/objects/Order_Item__c/fields/FECHA_DE_VENCIMIENTO__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_VENCIMIENTO__c</fullName>
    <label>FECHA DE VENCIMIENTO</label>
    <type>Date</type>
</CustomField>