force-app/main/default/objects/Order_Item__c/fields/Fill_UP_Return_Goods__c.field-meta.xml
<CustomField>
    <fullName>Fill_UP_Return_Goods__c</fullName>
    <label>Fill up Consignment Returned Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>