force-app/main/default/objects/Order_Item__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight (KG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>