force-app/main/default/objects/Order_Item__c/fields/IEPS__c.field-meta.xml
<CustomField>
    <fullName>IEPS__c</fullName>
    <label>IEPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>