force-app/main/default/objects/Order_Item__c/fields/Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost__c</fullName>
    <formula>IF(TEXT(Order__r.Currency__c)=&apos;USD&apos;, Commodity__r.Product_Sales_Info__r.Cost_USD__c,Commodity__r.Product_Sales_Info__r.Cost_Local__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>