force-app/main/default/objects/Order_Item__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <label>Inventory Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Storage_Location</valueSetName>
    </valueSet>
</CustomField>