force-app/main/default/objects/Order_Item__c/fields/Inventory_Margin__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Margin__c</fullName>
    <formula>(Unit_Price__c-Inventory_Cost__c) / Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>