force-app/main/default/objects/Order_Item__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <description>不含税发票金额</description>
    <formula>Price__c * Bill_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>