force-app/main/default/objects/Order_Item__c/fields/Invoice_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Number__c</fullName>
    <label>Invoice Amount Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>