force-app/main/default/objects/Order_Item__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Item</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>