force-app/main/default/objects/Order_Item__c/fields/Is_met_the_inventory__c.field-meta.xml
<CustomField>
    <fullName>Is_met_the_inventory__c</fullName>
    <formula>IF(SAP_Remain_Stock__c &gt;= Default_Unit_Quantity__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is met the inventory</label>
    <type>Checkbox</type>
</CustomField>