force-app/main/default/objects/Order_Item__c/fields/Is_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Week__c</fullName>
    <formula>Order__r.Approve_Date__c &gt;= (TODAY()-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+2) &amp;&amp; Order__r.Approve_Date__c &lt;= TODAY()-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is This Week</label>
    <type>Checkbox</type>
</CustomField>