force-app/main/default/objects/Order_Item__c/fields/IsCreate__c.field-meta.xml
<CustomField>
    <fullName>IsCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreate</label>
    <type>Checkbox</type>
</CustomField>