force-app/main/default/objects/Order_Item__c/fields/Issue_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Quantity__c</fullName>
    <description>ZARB订单产品被使用数量-ZARE&amp;ZARF,ZARA, Approving Approvd</description>
    <inlineHelpText>Aproving/Approved ZARE+Aproving/Approved ZARA-Approved ZARF</inlineHelpText>
    <label>ZARB Used Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>