force-app/main/default/objects/Order_Item__c/fields/Latest_Min_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Min_Sales_Price__c</fullName>
    <formula>Price_Book_Item__r.Min_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Min Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>