force-app/main/default/objects/Order_Item__c/fields/Latest_Unit_Estimate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Latest_Unit_Estimate_Cost__c</fullName>
    <formula>IF(TEXT(Order__r.Currency__c)=&apos;USD&apos;,Price_Book_Item__r.Estimation_Cost_USD__c, Price_Book_Item__r.Estimation_Cost_Local__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Unit Estimate Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>