force-app/main/default/objects/Order_Item__c/fields/Lower_Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Lower_Min_Price__c</fullName>
    <formula>Min_Sales_Price__c &gt; Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lower Min Price</label>
    <type>Checkbox</type>
</CustomField>