force-app/main/default/objects/Order_Item__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Unit Margin</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>