force-app/main/default/objects/Order_Item__c/fields/Margin_Level__c.field-meta.xml
<CustomField>
    <fullName>Margin_Level__c</fullName>
    <formula>IF(
    (TEXT(Order__r.Sales_Org__c)==&apos;5070&apos; &amp;&amp; !Order__r.Is_YPF__c),
    IF(
        Margin_Rate__c=0,
        &apos;&apos;,
        IF(
            Margin_Rate__c*100&lt;10,
            IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),
            IF(
                Margin_Rate__c*100&lt;=20,
                IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
            )
        )
    ),
    IF(
        (Order__r.Is_YPF__c || TEXT(Order__r.Sales_Org__c)==&apos;5130&apos;)
        ,IF(
            Unit_Estimate_Margin_Rate__c=0,
            &apos;&apos;,
            IF(
                Unit_Estimate_Margin_Rate__c*100&lt;20,
                IMAGE($Label.Black, &apos;Margin Level&apos; , 20, 21),
                IF(
                    Unit_Estimate_Margin_Rate__c*100&lt;28,
                    IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),
                    IF(
                        Unit_Estimate_Margin_Rate__c*100&lt;35,
                        IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                        IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
                    )

                )
            )
        ),
        IF(
            OR(Margin_Rate__c = 0,Actual_Margin_Rate__c  =0),
            &apos;&apos;,
            IF(
                OR(
                    AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3010&apos;,Margin_Rate__c*100&lt;10),
                    AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3011&apos;,Actual_Margin_Rate__c*100&lt;20),
                    AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3020&apos;,Actual_Margin_Rate__c*100&lt;20)
                ),
                IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),
                IF(
                    OR(
                        AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3010&apos;,Margin_Rate__c*100&lt;=20),
                        AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3011&apos;,Actual_Margin_Rate__c*100&lt;=40),
                        AND(TEXT(Order__r.Deliver_Plant__c)==&apos;3020&apos;,Actual_Margin_Rate__c*100&lt;=35)
                    ),
                    IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                    IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
                )
            )
        )

    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Level</label>
    <type>Text</type>
</CustomField>