force-app/main/default/objects/Order_Item__c/fields/Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Margin_Rate__c</fullName>
    <label>Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>