force-app/main/default/objects/Order_Item__c/fields/Margin_Rate_Text__c.field-meta.xml
<CustomField>
    <fullName>Margin_Rate_Text__c</fullName>
    <formula>TEXT( Margin_Rate__c*100 )+&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Rate Text</label>
    <type>Text</type>
</CustomField>