force-app/main/default/objects/Order_Item__c/fields/Margin_Report__c.field-meta.xml
<CustomField>
    <fullName>Margin_Report__c</fullName>
    <formula>IF(
(TEXT(Order__r.Status__c)!=&apos;Approved&apos;),
0,
IF(
isClosed__c,
 Margin__c * Bill_Quantity__c ,
 Margin__c * Quantity__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>