force-app/main/default/objects/Order_Item__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>