force-app/main/default/objects/Order_Item__c/fields/New_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Delivery_Date__c</fullName>
    <label>New Delivery Date</label>
    <type>Date</type>
</CustomField>