force-app/main/default/objects/Order_Item__c/fields/New_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Quantity__c</fullName>
    <label>New Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>