force-app/main/default/objects/Order_Item__c/fields/OPTAX__c.field-meta.xml
<CustomField>
    <fullName>OPTAX__c</fullName>
    <label>OPTAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>