force-app/main/default/objects/Order_Item__c/fields/Order_Customer__c.field-meta.xml
<CustomField>
    <fullName>Order_Customer__c</fullName>
    <formula>CASESAFEID(Order__r.Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Order Customer</label>
    <type>Text</type>
</CustomField>