force-app/main/default/objects/Order_Item__c/fields/Order_Item_Amount_Guide__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Amount_Guide__c</fullName>
    <formula>IF(isClosed__c,Guide_Price__c * Delivery_Quantity__c,Guide_Price__c * Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Amount Guide</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>