force-app/main/default/objects/Order_Item__c/fields/Order_Item_Amount_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Amount_Report_Number__c</fullName>
    <label>Order Item Amount Report Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>