force-app/main/default/objects/Order_Item__c/fields/Order_Item_Amount_Report_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Amount_Report_USD__c</fullName>
    <formula>Order_Item_Amount_Report__c / Order__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Amount Report (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>