force-app/main/default/objects/Order_Item__c/fields/Order_Item_Amount_Without__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Amount_Without__c</fullName>
    <formula>IF(isClosed__c,Delivery_Quantity__c *  Unit_Price_w_o_tax__c,Quantity__c *  Unit_Price_w_o_tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Amount Without Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>