force-app/main/default/objects/Order_Item__c/fields/Order_Item_Invoice_Amount_W_O_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Invoice_Amount_W_O_Tax_USD__c</fullName>
    <formula>(Invoice_Amount__c / Order__r.Rate__c)*IF(CONTAINS(&apos;ZAR8,ZARX,ZMX2,ZMX3,ZRE,ZRE1,ZREQ,ZR1Q,ZARA,ZARF,ZAR2,ZAR3&apos;,TEXT(Order__r.Order_type__c)), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Invoice Amount W/O Tax(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>