force-app/main/default/objects/Order_Item__c/fields/Order_Item_Undelivered_Quantity_Report__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Undelivered_Quantity_Report__c</fullName>
    <formula>IF(isClosed__c,0,IF(TEXT(Order__r.Order_type__c )==&apos;ZARF&apos;,(Quantity__c - Delivery_Quantity__c)*-1, (Quantity__c - Delivery_Quantity__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Undelivered Quantity Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>