force-app/main/default/objects/Order_Item__c/fields/Order_Item_Uninvoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Uninvoiced_Quantity__c</fullName>
    <formula>Delivery_Quantity__c - Bill_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Uninvoiced Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>