force-app/main/default/objects/Order_Item__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>TEXT(Order__r.Order_type__c)</formula>
    <label>*Order Type</label>
    <type>Text</type>
</CustomField>