force-app/main/default/objects/Order_Item__c/fields/Original_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Original_Product_Cost__c</fullName>
    <description>原有成本  model b为报价成本，model c为产品销售视图上得成本</description>
    <label>Original Product Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>