force-app/main/default/objects/Order_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>