force-app/main/default/objects/Order_Item__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipName>Order_Item_Number</relationshipName>
    <type>Lookup</type>
</CustomField>