force-app/main/default/objects/Order_Item__c/fields/Price_Is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Price_Is_Changed__c</fullName>
    <formula>Depend_On_Item__r.Price__c &lt;&gt; Price__c</formula>
    <label>Price Is Changed</label>
    <type>Checkbox</type>
</CustomField>