force-app/main/default/objects/Order_Item__c/fields/Price_Rate_Developer__c.field-meta.xml
<CustomField>
    <fullName>Price_Rate_Developer__c</fullName>
    <label>Price Rate(Developer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>