force-app/main/default/objects/Order_Item__c/fields/Price_Rate_Text__c.field-meta.xml
<CustomField>
    <fullName>Price_Rate_Text__c</fullName>
    <formula>TEXT(Price_Rate_User__c*100) +&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Rate Text</label>
    <type>Text</type>
</CustomField>